working on customFetch function

--- a/index.html
+++ b/index.html
@@ -10,7 +10,35 @@
 </head>
 
 <body>
-    <div id="main">Hello from index.html. Something went wrong</div>
+    <div id="fridge">Hello from index.html. Something went wrong</div>
 </body>
+
+<div id="ing-page" class="hidden">
+    <form id="ing-form" class="ingredients-form">
+    <input type="text" name="add-ingredient" placeholder="Input ingredients" required>
+            <input type="submit" value="Add Item">
+    </form>
+
+    <div class="ingredients-container">
+        <h2>Ingredients List:</h2>
+
+        <ul class="ingredients">
+            
+        </ul>
+    </div>
+</div>
+
+
+<div id="oven"> I'm an oven</div>
+
+<div id="recipe-page" class="hidden">
+    <div class="recipe-container">
+        <h2>Recipe:</h2>
+
+        <p class="recipe"></p>
+
+    </div>
+</div>
+
 
 </html>
