--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 
 <body>
     <div id="fridge">Hello from index.html. Something went wrong</div>
-</body>
+
+
+<!-- <div id="tooltip" class="tooltip">
+    <p>Tooltip Data</p>
+    <p><span id="value"> value </span></p>
+</div> -->
 
 
 <div id="ing-page" class="hidden">
@@ -26,8 +31,7 @@
         <h2>Ingredients List:</h2>
         <button type="button" id="clearButton">Clear</button>
 
-        <ul class="ingredients">
-            
+        <ul class="ingredients">   
         </ul>
     </div>
 </div>
@@ -146,6 +150,8 @@
         <option value="Sweets">Sweets</option>
       </select>
 </div>
+
+</body>
 
 
 </html>
