general positioning of kitchen

--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
 </head>
 
 <body>
+    <div id="oven"> I'm an oven</div>
+    <div id="drawer">I'm the recipe drawer</div>
     <div id="fridge">Hello from index.html. Something went wrong</div>
+    <div id="sink-cabinet"></div>
+    <div id="sink-top"></div>
+    <div id="sink"></div>
+    <div id="dishwasher"></div>
+    <div id="hood"></div>
+    <div id="cabinet"></div>
+    <div id="cabinetThree"></div>
+    <div id="cabinetTwo"></div>
 
 
 <!-- <div id="tooltip" class="tooltip">
@@ -37,8 +47,6 @@
 </div>
 
 
-<div id="oven"> I'm an oven</div>
-
 <div id="recipe-page" class="hidden">
     <button type="button" id="button">Click Me!</button>
     <button type="button" id="clearRecipe">Clear</button>
@@ -50,7 +58,7 @@
     </div>
 </div>
 
-<div id="drawer">I'm the recipe drawer</div>
+
 
 <div id="drawer-page" class="hidden">
     <div>Diet dropdown</div>
