created recipe modal

--- a/index.html
+++ b/index.html
@@ -42,8 +42,6 @@
 <div class="ing-modal">
     <button id="closeIngModal">Close Modal</button>
     <div id="ing-page">
-        
-
         <div class="ingredients-container">
             <h1>Ingredients List:</h1>
             <form id="ing-form" class="ingredients-form">
@@ -58,19 +56,36 @@
 
 </div>
 
-
-
-<div id="recipe-page" class="hidden">
-    <button type="button" id="button">Click Me!</button>
-    <button type="button" id="clearRecipe">Clear</button>
-    <div class="recipe-container">
-        <h2>Recipe:</h2>
-
-        <ul class="recipe"></ul>
+<div class="recipe-modal">
+    <button id="closeRecipeModal">Close Modal</button>
+    <div id="recipe-page">
+        <div class="recipe-container">
+            <button type="button" id="button">Click Me!</button>
+            <button type="button" id="clearRecipe">Clear</button>
+            <h2>Recipe:</h2>
+            <ul class="recipe"></ul>
+        </div>
+        <div id="chart-page">
+            <ul id="chart">  
+            </ul>
+        </div>
 
     </div>
 </div>
 
+
+<!-- <div class="recipe-modal">
+    <div id="recipe-page" class="hidden">
+        <button type="button" id="button">Click Me!</button>
+        <button type="button" id="clearRecipe">Clear</button>
+        <div class="recipe-container">
+            <h2>Recipe:</h2>
+
+            <ul class="recipe"></ul>
+
+        </div>
+    </div>
+</div> -->
 
 
 <div id="drawer-page" class="hidden">
