--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
 </head>
 
 <body>
+
+    <div id="microwave-container">
+        <div id="microwave"></div>
+    </div>
+
+    <div id="sink-top-container">
+        <div id="sink-top"></div>
+    </div>
+
+    <div id="pot-container">
+        <div id="pot"></div>
+    </div>
+    
     <!-- <div id="first-container">container-1 -->
         <div id="second-container">
             <div class="top-container">
@@ -32,11 +45,7 @@
     <div id="fridge"></div>
     </div>
 
-    <!-- <div id="sink-top">sink top</div> -->
-
-
-
-
+    
 
 
 <div class="ing-modal">
@@ -74,22 +83,11 @@
 </div>
 
 
-<!-- <div class="recipe-modal">
-    <div id="recipe-page" class="hidden">
-        <button type="button" id="button">Click Me!</button>
-        <button type="button" id="clearRecipe">Clear</button>
-        <div class="recipe-container">
-            <h2>Recipe:</h2>
-
-            <ul class="recipe"></ul>
-
-        </div>
-    </div>
-</div> -->
-
-
-<div id="drawer-page" class="hidden">
-    <div>Diet dropdown</div>
+<div class="drawer-modal">
+    <button id="closeDrawerModal">Close Modal</button>
+    <div id="drawer-page">
+        <div class="drawer-container">
+            <div>Diet dropdown</div>
     <button type="button" id="resetButton">reset</button>
     <select id="diet" name="diet">
         <option value="none" selected disabled hidden>Select an Option</option>
@@ -181,7 +179,106 @@
         <option value="Starter">Starter</option>
         <option value="Sweets">Sweets</option>
     </select>
+        </div>
+    </div>
 </div>
+
+
+
+<!-- <div id="drawer-page" class="hidden">
+    <div>Diet dropdown</div>
+    <select id="diet" name="diet">
+        <option value="none" selected disabled hidden>Select an Option</option>
+        <option value="balanced">balanced</option>
+        <option value="high-fiber">high-fiber</option>
+        <option value="high-protein">high-protein</option>
+        <option value="low-carb">low-carb</option>
+        <option value="low-fat">low-fat</option>
+        <option value="low-sodium">low-sodium</option>
+    </select>
+    <div>Cuisine dropdown</div>
+    <select id="cuisine" name="cuisine">
+        <option value="none" selected disabled hidden>Select an Option</option>
+        <option value="American">American</option>
+        <option value="Asian">Asian</option>
+        <option value="British">British</option>
+        <option value="Caribbean">Caribbean</option>
+        <option value="Central Europe">Central Europe</option>
+        <option value="Chinese">Chinese</option>
+        <option value="Eastern Europe">Eastern Europe</option>
+        <option value="French">French</option>
+        <option value="Indian">Indian</option>
+        <option value="Italian">Italian</option>
+        <option value="Japanese">Japanese</option>
+        <option value="Kosher">Kosher</option>
+        <option value="Mediterannean">Mediterannean</option>
+        <option value="Middle Eastern">Middle Eastern</option>
+        <option value="Nordic">Nordic</option>
+        <option value="South American">South American</option>
+        <option value="South East Asian">South East Asian</option>
+    </select>
+    <div>Health dropdown</div>
+    <select id="health" name="health">
+        <option value="none" selected disabled hidden>Select an Option</option>
+        <option value="alcohol-free">alcohol-free</option>
+        <option value="celery-free">celery-free</option>
+        <option value="crustacean-free">crustacean-free</option>
+        <option value="dairy-free">dairy-free</option>
+        <option value="egg-free">egg-free</option>
+        <option value="fish-free">fish-free</option>
+        <option value="gluten-free">gluten-free</option>
+        <option value="keto">keto</option>
+        <option value="kidney-friendly">kidney-friendly</option>
+        <option value="low-potassium">low-potassium</option>
+        <option value="low-sugar">low-sugar</option>
+        <option value="mollusk-free">mollusk-free</option>
+        <option value="mustard-free">mustard-free</option>
+        <option value="paleo">paleo</option>
+        <option value="peanut-free">peanut-free</option>
+        <option value="pork-free">pork-free</option>
+        <option value="red-meat-free">red-meat-free</option>
+        <option value="sesame-free">sesame-free</option>
+        <option value="shellfish-free">shellfish-free</option>
+        <option value="soy-free">soy-free</option>
+        <option value="sugar-conscious">sugar-conscious</option>
+        <option value="tree-nut-free">tree-nut-free</option>
+        <option value="vegan">vegan</option>
+        <option value="vegetarian">vegetarian</option>
+        <option value="wheat-free">wheat-free</option>
+    </select>
+    <div>Meal type dropdown</div>
+    <select id="mealType" name="mealType">
+        <option value="none" selected disabled hidden>Select an Option</option>
+        <option value="Dinner">Dinner</option>
+        <option value="Lunch">Lunch</option>
+        <option value="Snack">Snack</option>
+        <option value="Teatime">Teatime</option>
+        <option value="Breakfast">Breakfast</option>
+        <option value="low-sodium">low-sodium</option>
+    </select>
+
+    <div>Dish Type dropdown</div>
+    <select id="dishType" name="dishType">
+        <option value="none" selected disabled hidden>Select an Option</option>
+        <option value="Biscuits and cookies">Biscuits and cookies</option>
+        <option value="Bread">Bread</option>
+        <option value="Cereals">Cereals</option>
+        <option value="Condiments and sauces">Condiments and sauces</option>
+        <option value="Desserts">Desserts</option>
+        <option value="Drinks">Drinks</option>
+        <option value="Main course">Main course</option>
+        <option value="Pancake">Pancake</option>
+        <option value="Preps">Preps</option>
+        <option value="Preserve">Preserve</option>
+        <option value="Salad">Salad</option>
+        <option value="Sandwiches">Sandwiches</option>
+        <option value="Side dish">Side dish</option>
+        <option value="Soup">Soup</option>
+        <option value="Starter">Starter</option>
+        <option value="Sweets">Sweets</option>
+    </select>
+    <button type="button" id="resetButton">reset</button>
+</div> -->
 
 </body>
 
