added dots to links

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <h1>Ingredients List:</h1>
         <form id="ing-form" class="ingredients-form">
     <input type="text" name="add-ingredient" placeholder="Input ingredients" required>
-            <input type="submit" value="Add Item">
+            <input type="submit" value="Add Ingredient" id="add-ingredient">
     </form>
         <button type="button" id="clearButton">Clear</button>
         <ul class="ingredients"></ul>
@@ -133,7 +133,7 @@
     <div id="drawer-page">
     
         <div class="drawer-container">
-            <button type="button" id="resetButton">reset</button>
+            <button type="button" id="resetButton">Reset</button>
             <h1>Refine Search</h1>
             <div>Diet</div>
     <select id="diet" name="diet">
