--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="./dist/main.js"></script>
     <script src='https://d3js.org/d3.v4.min.js'></script>
     <script src="https://d3js.org/d3-scale-chromatic.v0.3.min.js"></script>
-    <link rel="icon" type="image/png" href="../src/assets/favicon.ico">
+    <link rel="icon" type="image/png" href="../src/assets/favicon.ico?">
     <title>miKitchen</title>
 </head>
 
