--- a/index.html
+++ b/index.html
@@ -18,10 +18,6 @@
         <div id="microwave"></div>
     </div>
 
-    <div id="sink-top-container">
-        <div id="sink-top"></div>
-    </div>
-
     <div id="pot-container">
         <div id="pot"></div>
     </div>
@@ -42,24 +38,30 @@
     </div>
     
     <!-- <div id="first-container">container-1 -->
+        <div id="right-container">
+            <div id="fridge-container">
+                <div id="fridge"></div>
+            </div>
+        </div>
         <div id="second-container">
             <div class="top-container">
-                <div id="hood"></div>
                 <div id="cabinet"></div>
+                <div id="hood"></div>
                 <div id="cabinet-two"></div>
                 <div id="cabinet-three"></div> 
             </div>
             <div class="bottom-container">
-                <div id="oven"></div>
                 <div id="drawer"></div>
-                <div id="sink-cabinet"></div>
+                <div id="oven"></div>
                 <div id="dishwasher"></div>
+                <div id="sink-cabinet">
+                    <div id="sink-top-container">
+                        <div id="sink-top"></div>
+                    </div>
+                </div>
 
             </div>
         </div>
-    <div id="right-container">
-    <div id="fridge"></div>
-    </div>
 
     
 
