--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     </div>
     
     <div id="linkedin-container">
+        <a href="https://www.linkedin.com/in/eltion-behrami-5b9367271/" target="_blank"></a>
         <div id="linkedin"></div>
     </div>
     
